# codechallenge-solutions

./: .gitignore  AUTHORS  Challenges.md  Changelog.md  EDGE-CASES.txt  Makefile.am  NEWS  README.md  README.org  configure.ac  guix.scm  incant.sh
codechallenges/aoc2021/day-one/: .prompt  sonar-sweep.scm
codechallenges/minimum-number-of-jumps/: minimum-jumps.scm  minimumJumps.java
codechallenges/sparsearrays/: .prompt  pseudocode.pseudo  sparseArrays.java
doc/: codechallenge-solutions.texi
src/minimum-number-of-jumps/: .prompt  minimumJumps.java
